# HackTheCar_EmergencyPassthroughSystem

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hackathon_architecture.drawio  pyproject.toml
configs/: eps_controller.json  mqtt_bridge.json
docker/: Dockerfile
resources/: hackathon_architecture.drawio
src/controller/: eps_controller.py
src/jetracer/: moveaway.py  mqtt.py  nvidia_racecar.py  smallcar.config  smallcar.py  test-json.py  test.py
src/jetracer/notebooks/: basic_motion.ipynb  interactive_regression.ipynb  road_following.ipynb  steering.ipynb
src/mqtt-bridge/: Dockerfile  EPS_controller.py  mqtt_bridge.py
